--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -38,12 +38,17 @@ $shade0: #fff;
 $colorPrimary: #4a63a3;
 $colorPrimaryDark: #3d5183;
 $colorSecondary: #f3c243;
-$colorSecondaryDark: #b38c29;
+$colorSecondaryDark: #d3ac48;
 
 $colorError: #e95555;
 $colorWarning: #ffbc57;
 $colorInformation: #518ac0;
 $colorSuccess: #338f48;
+
+$colorErrorDark: #f86262;
+$colorWarningDark: #ff9d5b;
+$colorInformationDark: #34b6ff;
+$colorSuccessDark: #23b944;
 
 $colorTextLight: rgba(255, 255, 255, 0.9);
 $colorTextDark: #2b2f38;
