--- a/src/components/molecules/CreateUpdatePredictionForm/CreateUpdatePredictionForm.scss
+++ b/src/components/molecules/CreateUpdatePredictionForm/CreateUpdatePredictionForm.scss
@@ -56,7 +56,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    
+    border: $defaultBorder;
 
     &:hover {
       outline: none;
