--- a/src/components/molecules/TransactionFullList/TransactionFullList.scss
+++ b/src/components/molecules/TransactionFullList/TransactionFullList.scss
@@ -1,36 +1,139 @@
 .tFullList {
-
   $base: &;
   $item: #{$base}Item;
-  padding-bottom: $unit;
-
-  &__filters {
-    font-size: 2rem;
-    color: red;
-  }
+  margin-bottom: $unit * 4;
 
   &__items {
+    display: flex;
+    flex-direction: column;
+    gap: $unit * 0.75;
 
     #{$item} {
-      padding: $unit * 0.75;
-      border-top: $defaultBorder;
-      
-      
+      @extend %cardBase;
+
+      padding: $unit * 0.75 $unit;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      grid-template-rows: auto auto;
+      position: relative;
+
       &:hover {
-        background-color: var(--bg-input);
-      }
-      
-      &:last-child {
-        border-bottom: $defaultBorder;
+        @include focusOutline;
       }
 
+      #{$item}__main {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-rows: 16px auto;
+        margin-bottom: $unit * 0.75;
+
+        #{$item}__bank {
+          grid-column: 2;
+          grid-row: 1;
+          font-weight: 600;
+          font-size: 1rem;
+          font-family: $specialFont;
+          color: var(--shade30);
+        }
+
+        #{$item}__category {
+          grid-row: 1 / span 2;
+          grid-column: 1;
+          margin-right: $unit * 0.75;
+        }
+
+        #{$item}__label {
+          grid-column: 2;
+          grid-row: 2;
+          display: flex;
+
+          h3 {
+            font-size: 1.3rem;
+            font-weight: 600;
+            color: var(--color-text);
+          }
+
+          #{$item}__amount {
+            color: var(--color-success);
+            font-weight: 600;
+            margin-left: $halfUnit;
+            align-self: center;
+            
+            &--negative {
+              font-weight: 500;
+              color: var(--color-error);
+            }
+          }
+        }
+      }
+
+      #{$item}__otherDetails {
+        grid-row: 2;
+        grid-column: 1 / span 2;
+        display: flex;
+        gap: $unit;
+        margin-left: $unit * 0.25;
+
+        #{$item}__detail {
+          display: flex;
+          gap: $halfUnit;
+
+          p {
+            color: var(--shade50);
+          }
+        }
+      }
+
+      #{$item}__actions {
+        grid-column: 2;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: $unit * 0.25;
+        justify-content: center;
+        transform: translate($halfUnit, -$unit * 0.25);
+
+        #{$item}__action {
+          padding: $unit * 0.5;
+          border-radius: $defaultBorderRadius;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: $unit * 2.25;
+
+          &:hover {
+            background: var(--bg-input);
+          }
+        }
+      }
+
+      &--selected,
+      &--selected:hover {
+        @include focusOutline(rgba($colorPrimary, 0.7));
+      }
     }
   }
 
-
   &__pagination {
+    @extend %cardBase;
+    box-shadow: var(--dropdown-shadow);
+    
     margin-top: $unit;
     display: flex;
     justify-content: center;
+    position: fixed;
+    bottom: $unit;
+    left: 50%;
+    transform: translate(-50%, 0);
+    padding: $halfUnit;
+    animation: fixedPaginationFadeIn 0.6s ease;
+  }
+}
+
+#{$themeDarkClass} {
+  .tFullList {
+    &__pagination {
+      box-shadow: 0px 0px 8px 4px rgba(255, 255, 255, 0.2);
+    }
   }
 }
