--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -26,3 +26,14 @@
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+
+@keyframes fixedPaginationFadeIn {
+  0% { 
+    opacity: 0.3;
+    transform: translate(-50%, $unit * 4);
+  }
+  100% { 
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+}
