--- a/src/styles/Mixins.scss
+++ b/src/styles/Mixins.scss
@@ -8,3 +8,14 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: $lineClamp;
 }
+
+@mixin headerGradient($startColor: var(--color-text-primary), $endColor: var(--color-information)) {
+  font-size: 1.5rem;
+  font-weight: 600;
+  background-image: linear-gradient(45deg, $startColor, $endColor);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-text-fill-color: transparent;
+}
