--- a/src/components/molecules/TransactionFullList/TransactionFullList.scss
+++ b/src/components/molecules/TransactionFullList/TransactionFullList.scss
@@ -3,6 +3,10 @@
   $item: #{$base}Item;
   margin-bottom: $unit * 4;
 
+  &__empty {
+    margin-top: $unit * 4;
+  }
+
   &__items {
     display: flex;
     flex-direction: column;
@@ -109,7 +113,7 @@
 
       &--selected,
       &--selected:hover {
-        @include focusOutline(rgba($colorPrimary, 0.7));
+        @include focusOutline(rgba(lighten($colorPrimary, 10%), 0.7));
       }
     }
   }
@@ -124,7 +128,7 @@
     justify-content: center;
     position: fixed;
     bottom: 0;
-    left: 50%;
+    left: 62%;
     transform: translate(-50%, 0);
     padding: $halfUnit;
     animation: fixedPaginationFadeIn 0.6s ease;
