--- a/src/styles/Themes.scss
+++ b/src/styles/Themes.scss
@@ -22,7 +22,7 @@ $themeLightClass: ".theme--light";
   --color-secondary: #{$colorSecondary};
   --color-text: #{$colorTextDark};
   --color-text-inverse: #{$colorTextLight};
-  --color-text-primary: #{$colorPrimary};
+  --color-text-primary: #{$colorTextPrimary};
   --color-error: #{$colorError};
   --color-warning: #{$colorWarning};
   --color-information: #{$colorInformation};
@@ -63,7 +63,7 @@ $themeLightClass: ".theme--light";
   --color-secondary: #{$colorSecondaryDark};
   --color-text: #{$colorTextLight};
   --color-text-inverse: #{$colorTextDark};
-  --color-text-primary: #BBCDFA;
+  --color-text-primary: #{$colorTextPrimaryDark};
   --color-error: #{$colorErrorDark};
   --color-warning: #{$colorWarningDark};
   --color-information: #{$colorInformationDark};
