--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -37,6 +37,7 @@ $shade0: #fff;
 
 $colorPrimary: #4a63a3;
 $colorPrimaryDark: #3d5183;
+
 $colorSecondary: #f3c243;
 $colorSecondaryDark: #d3ac48;
 
@@ -52,6 +53,8 @@ $colorSuccessDark: #23b944;
 
 $colorTextLight: rgba(255, 255, 255, 0.9);
 $colorTextDark: #2b2f38;
+$colorTextPrimary: $colorPrimary;
+$colorTextPrimaryDark: #BBCDFA;
 $colorDisabled: $shade5;
 
 /**
