--- a/src/components/atoms/Header/Header.scss
+++ b/src/components/atoms/Header/Header.scss
@@ -13,6 +13,9 @@
     line-height: 1.5;
     margin: 0;
     color: var(--header-color);
+    font-weight: 500;
+    font-family: $specialFont;
+    font-size: 1.1rem;
   }
 
   &--success {
