--- a/src/components/molecules/PredictionPreviewList/PredictionPreviewList.scss
+++ b/src/components/molecules/PredictionPreviewList/PredictionPreviewList.scss
@@ -1,6 +1,7 @@
 
 
 .predictionList {
+  --color-selected-notch: #{mix($colorPrimary, white, 75%)};
   
   &__item {
     display: grid;
@@ -14,17 +15,17 @@
     border-bottom: 0px solid var(--shade10); // fixes color transition
 
     &--selected {
-      background-color: rgba($colorSecondary, 0.1) !important;
+      background-color: rgba($colorPrimary, 0.1) !important;
 
       ::after {
         content: "";
-        width: $unit * 0.8;
-        height: $unit * 0.8;
-        border-radius: 50%;
+        width: $unit * 0.3;
+        height: $unit * 1.5;
+        border-radius: 4px;
         position: absolute;
-        background-color: var(--color-secondary);
+        background-color: var(--color-selected-notch);
         right: $unit * 0.75;
-        top: calc(50% - #{$unit * 0.4});
+        top: calc(50% - #{$unit * 0.75});
       }
     }
 
