--- a/src/components/templates/AppLayout/AppLayout.scss
+++ b/src/components/templates/AppLayout/AppLayout.scss
@@ -1,4 +1,6 @@
 .app {
+  $base: &;
+
   display: grid;
   grid-template-columns: 1fr 25%;
   grid-template-rows: auto 1fr;
@@ -23,9 +25,19 @@
     border-left: $defaultBorder;
   }
   
-  &__content {
+  &__sidebar + &__content {
     grid-column: 1;
+  }
+
+  &__content {
+    grid-column: 1 / span 2;
     grid-row: 2;
     overflow-y: auto;
+  }
+
+  &--noHeader {
+    #{$base}__navbar {
+      grid-column: 1 / span 2;
+    }
   }
 }
