--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -4,6 +4,7 @@
 @import "@atoms/Checkbox/Checkbox.scss";
 @import "@atoms/DatePicker/DatePicker.scss";
 @import "@atoms/DateRangePicker/DateRangePicker.scss";
+@import "@atoms/Drawer/Drawer.scss";
 @import "@atoms/Empty/Empty.scss";
 @import "@atoms/Header/Header.scss";
 @import "@atoms/Insight/Insight.scss";
