--- a/src/components/atoms/Input/Input.scss
+++ b/src/components/atoms/Input/Input.scss
@@ -102,4 +102,18 @@
   &--tall input {
     height: $inputHeightLarge;
   }
+
+  &--white {
+    input {
+      background-color: rgba(mix($shade0, $shade100, 90%), 65%);
+
+      &::placeholder {
+        color: var(--shade40);
+      }
+
+      &:focus {
+        @include focusOutline(rgba($colorPrimary, 65%));
+      }
+    }
+  }
 }
