--- a/src/components/templates/AuthPage/AuthPage.scss
+++ b/src/components/templates/AuthPage/AuthPage.scss
@@ -1,84 +1,71 @@
 .auth {
   $base: &;
-  position: relative;
-  min-height: 100vh;
-  overflow-y: auto;
 
-  &__background {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+
+  &__background, &__container {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    user-select: none;
-    animation: pulse 5s infinite;
+    right: 0;
+    bottom: 0;
   }
 
   &__container {
-    margin: 0 auto;
-    max-width: 460px;
     display: flex;
-    flex-flow: column;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 5%;
-    
-    #{$base}__logo {
-      margin-bottom: 5%;
-      margin-top: $unit;
-    }
-
-    #{$base}__main {
-      width: 100%;
-      margin-bottom: $unit;
-      z-index: 10;
-    }
-  }
-
-  &__error {
-    color: $colorError;
-    z-index: 1;
+    justify-content: flex-end;
+    padding: $halfUnit;
+    overflow: hidden;
   }
 
   &__card {
-    border-radius: $unit * 0.5;
-    background: white;
-    box-shadow: 0px 8px 64px 0px rgba(0, 0, 0, 0.25);
-    padding: $unit * 1.3;
-    margin: 0 $unit;
-  }
+    border-radius: $defaultBorderRadius;
+    background-color: rgba(235, 235, 235, 0.6);
+    width: 25vw;
+    backdrop-filter: blur(6px);
+    padding: $unit * 1.5;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    animation: authFadeInLeft 0.5s ease-out;
 
-  &__cardBody {
-    margin-bottom: $unit;
-    display: flex;
-    flex-flow: column;
-    gap: $unit;
-  }
+    #{$base}__logo {
+      display: flex;
+      justify-content: center;
+      grid-row: 1;
+    }
+  
+    #{$base}__form {
+      grid-row: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-bottom: $unit * 1.5;
+      gap: $unit;
 
-  &__cardTitle {
-    font-family: $defaultFont;
-    font-size: 28px;
-    margin-bottom: $unit;
-  }
-
-  &__cardFooter {
-    display: flex;
-    justify-content: center;
-  }
-
-  &__termsWarning {
-    color: $shade40;
-    font-size: 0.9rem;
-
-    a {
-      text-decoration: none;
-      color: $colorPrimary;
-
-      &:hover {
-        text-decoration: underline;
+      #{$base}__title {
+        color: var(--shade80);
+        font-size: 1.5rem;
+        font-weight: 600;
       }
     }
+  
+    #{$base}__footer {
+      grid-row: 3;
+
+      #{$base}__footerText {
+        color: var(--shade70);
+        font-size: 1rem;
+        text-align: center;
+      }
+    }
+  }
+
+  &__buttons {
+    margin-top: $unit;
+    display: flex;
+    gap: $unit;
+    flex-direction: column;
   }
 }
