--- a/src/styles/Placeholders.scss
+++ b/src/styles/Placeholders.scss
@@ -10,6 +10,7 @@
   outline: none;
   border: none;
   background-color: var(--bg-input);
+  color: var(--color-text);
   border-radius: $defaultBorderRadius;
   height: $inputHeight;
   font-size: 1rem;
