--- a/src/components/templates/AuthPage/AuthPage.scss
+++ b/src/components/templates/AuthPage/AuthPage.scss
@@ -20,6 +20,10 @@
     overflow: hidden;
   }
 
+  &__error {
+    @extend %inputErrorText;
+  }
+
   &__card {
     border-radius: $defaultBorderRadius;
     background-color: rgba(235, 235, 235, 0.6);
