--- a/src/styles/Placeholders.scss
+++ b/src/styles/Placeholders.scss
@@ -33,6 +33,13 @@
   margin-top: $unit * 0.5;
 }
 
+%inputErrorText {
+  margin-left: 6px;
+  margin-top: 6px;
+  font-size: 0.95rem;
+  color: var(--color-error);
+}
+
 %listItemTitle {
   font-size: 1.1rem;
   font-weight: 600;
