Features: add edit transaction, full predictions page integration with interactive chart

--- a/src/components/molecules/TransactionSearchForm/TransactionSearchForm.scss
+++ b/src/components/molecules/TransactionSearchForm/TransactionSearchForm.scss
@@ -3,6 +3,12 @@
 
   padding: $unit * 0.75;
 
+  &__actions {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: $unit;
+  }
+
   &__inputs {
     display: grid;
     gap: $halfUnit;
