--- a/src/components/templates/TransactionsBody/TransactionsBody.scss
+++ b/src/components/templates/TransactionsBody/TransactionsBody.scss
@@ -1,5 +1,5 @@
 .transactionsBody {
-  --bg-header: #{rgba($colorPrimary, 0.10)};
+  --bg-header: #{rgba($shade0, 0.30)};
 
   $base: &;
   $extraSpaceX: 12vw;
