--- a/src/components/atoms/Message/Message.scss
+++ b/src/components/atoms/Message/Message.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  &--counterMargin {
+    margin: #{-$unit} #{-$unit} 0px #{-$unit};
+  }
+
   &--fade {
     animation: fadeIn 0.5s ease-in-out;
   }
