--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -34,6 +34,7 @@
 @import "@organisms/DashCategorySpendingCard/DashCategorySpendingCard.scss";
 @import "@organisms/DashChartCard/DashChartCard.scss";
 @import "@organisms/DashQuickAddCard/DashQuickAddCard.scss";
+@import "@organisms/SetPredictionSidebar/SetPredictionSidebar.scss";
 @import "@organisms/TransactionSidebar/TransactionSidebar.scss";
 @import "@organisms/ImportConfigForm/ImportConfigForm.scss";
 
