Dashboard page ability to delete and quick add

--- a/src/components/molecules/TransactionList/TransactionList.scss
+++ b/src/components/molecules/TransactionList/TransactionList.scss
@@ -1,4 +1,10 @@
-// .tList {}
+.tList {
+  &__loadMore {
+    display: flex;
+    justify-content: center;
+    padding: $unit $unit * 0.75;
+  }
+}
 
 .tItem {
   $base: &;
