--- a/src/components/atoms/Message/Message.scss
+++ b/src/components/atoms/Message/Message.scss
@@ -59,7 +59,7 @@
     @extend %cardBase;
   }
 
-  &--bordered {
-    border: 1px solid var(--color-message);
-  }
+  // &--bordered {
+  // border: 1px solid var(--color-message);
+  // }
 }
