--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -9,6 +9,7 @@
 @import "@atoms/Header/Header.scss";
 @import "@atoms/Insight/Insight.scss";
 @import "@atoms/Input/Input.scss";
+@import "@atoms/KeyValue/KeyValue.scss";
 @import "@atoms/Loader/Loader.scss";
 @import "@atoms/Logo/Logo.scss";
 @import "@atoms/Message/Message.scss";
@@ -16,24 +17,30 @@
 @import "@atoms/SidebarHeader/SidebarHeader.scss";
 @import "@atoms/SkeletonItem/SkeletonItem.scss";
 @import "@atoms/UploadArea/UploadArea.scss";
+@import "@atoms/TabItem/TabItem.scss";
 
 @import "@molecules/BorrowList/BorrowList.scss";
+@import "@molecules/CreateInvestmentDrawer/CreateInvestmentDrawer.scss";
 @import "@molecules/CreateUpdatePredictionForm/CreateUpdatePredictionForm.scss";
 @import "@molecules/CreateUpdateTransactionForm/CreateUpdateTransactionForm.scss";
 @import "@molecules/CurrencyInput/CurrencyInput.scss";
 @import "@molecules/ImportList/ImportList.scss";
+@import "@molecules/InvestmentList/InvestmentList.scss";
 @import "@molecules/InsightsCollection/InsightsCollection.scss";
 @import "@molecules/Navbar/Navbar.scss";
 @import "@molecules/Pagination/Pagination.scss";
 @import "@molecules/PredictionPreviewList/PredictionPreviewList.scss";
+@import "@molecules/Tabs/Tabs.scss";
 @import "@molecules/TransactionFullList/TransactionFullList.scss";
 @import "@molecules/TransactionList/TransactionList.scss";
 @import "@molecules/TransactionSearchForm/TransactionSearchForm.scss";
 
+@import "@organisms/AddTimelineEvent/AddTimelineEvent.scss";
 @import "@organisms/DashBorrowingsCard/DashBorrowingsCard.scss";
 @import "@organisms/DashCategorySpendingCard/DashCategorySpendingCard.scss";
 @import "@organisms/DashChartCard/DashChartCard.scss";
 @import "@organisms/DashQuickAddCard/DashQuickAddCard.scss";
+@import "@organisms/InvestmentTimeline/InvestmentTimeline.scss";
 @import "@organisms/SetPredictionSidebar/SetPredictionSidebar.scss";
 @import "@organisms/TransactionSidebar/TransactionSidebar.scss";
 @import "@organisms/ImportConfigForm/ImportConfigForm.scss";
