--- a/src/styles/Themes.scss
+++ b/src/styles/Themes.scss
@@ -19,7 +19,9 @@ $themeLightClass: ".theme--light";
   --color-error-outline: #{mix($shade0, $colorError, 25%)};
   --color-placeholder: #95939D;
   --color-primary: #{$colorPrimary};
+  --color-primary-20: #{rgba($colorPrimary, 0.15)};
   --color-primary-50: #{rgba($colorPrimary, 0.5)};
+  --color-primary-90: #{rgba($colorPrimary, 0.9)};
   --color-secondary: #{$colorSecondary};
   --color-text: #{$colorTextDark};
   --color-text-inverse: #{$colorTextLight};
@@ -62,7 +64,9 @@ $themeLightClass: ".theme--light";
   --color-error-outline: #{mix($shade0, $colorError, 40%)};
   --color-placeholder: #95939D;
   --color-primary: #{$colorPrimaryDark};
+  --color-primary-20: #{rgba($colorPrimaryDark, 0.3)};
   --color-primary-50: #{rgba($colorPrimaryDark, 0.5)};
+  --color-primary-90: #{rgba($colorPrimaryDark, 0.9)};
   --color-secondary: #{$colorSecondaryDark};
   --color-text: #{$colorTextLight};
   --color-text-inverse: #{$colorTextDark};
@@ -82,7 +86,7 @@ $themeLightClass: ".theme--light";
   --shade15: #{$shade60};
   --shade10: #{$shade70};
   --shade5: #{$shade80};
-  --shade0: #{$shade100};
+  --shade0: #{lighten($shade100, 7%)};
 
   --card-shadow: #{$shadowDefaultDark};
   --dropdown-shadow: #{$shadowDefaultDark};
