--- a/src/components/atoms/Select/Select.scss
+++ b/src/components/atoms/Select/Select.scss
@@ -105,6 +105,10 @@
     width: $unit * 16;
   }
 
+  &--fixedWidthSmall {
+    width: $unit * 9;
+  }
+
   &--tall &__input {
     height: $inputHeightLarge;
   }
@@ -122,7 +126,7 @@
   width: $unit * 16;
   max-height: $unit * 20;
   margin-top: 8px;
-  padding: $halfUnit * 0.7 4px $halfUnit * 0.7 6px;
+  padding: $halfUnit * 0.7 6px $halfUnit * 0.7 6px;
   overflow-y: auto;
 
   &--above {
@@ -131,7 +135,6 @@
 }
 
 .selectMenuItem {
-  margin-bottom: $unit * 0.25;
   padding: $halfUnit;
   border-radius: $defaultBorderRadius;
   height: $inputHeight;
@@ -145,6 +148,10 @@
 
   &:hover:not(&--selected) {
     background-color: var(--shade10);
+  }
+
+  &:not(:last-child) {
+    margin-bottom: $unit * 0.25;
   }
 }
 
