Integrated dashboard insights and investments sections

--- a/src/components/atoms/Insight/Insight.scss
+++ b/src/components/atoms/Insight/Insight.scss
@@ -17,9 +17,15 @@
 
   &__title {
     font-weight: $specialFont;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 600;
     color: var(--shade60);
+
+    span {
+      font-size: 1rem;
+      font-weight: 400;
+      margin-left: $halfUnit;
+    }
   }
 
   label {
