Connected dashboard charts to api with mock data

--- a/src/components/atoms/Card/Card.scss
+++ b/src/components/atoms/Card/Card.scss
@@ -40,7 +40,7 @@
     justify-content: center;
     align-items: center;
     border-radius: $containerBorderRadius;
-    background-color: rgba($shade50, 0.2);
+    background-color: rgba(var(--shade70), 0.3);
     backdrop-filter: blur(4px);
 
     p {
