--- a/src/components/atoms/Select/Select.scss
+++ b/src/components/atoms/Select/Select.scss
@@ -120,13 +120,14 @@
   box-shadow: var(--dropdown-shadow);
   position: absolute;
   z-index: 15;
+  border-radius: $defaultBorderRadius * 0.5;
 
   display: flex;
   flex-direction: column;
   width: $unit * 16;
   max-height: $unit * 20;
   margin-top: 8px;
-  padding: $halfUnit * 0.7 6px $halfUnit * 0.7 6px;
+  padding: $halfUnit * 0.7 4px;
   overflow-y: auto;
 
   &--above {
@@ -136,7 +137,7 @@
 
 .selectMenuItem {
   padding: $halfUnit;
-  border-radius: $defaultBorderRadius;
+  border-radius: $defaultBorderRadius * 0.5;
   height: $inputHeight;
   cursor: pointer;
   user-select: none;
