Initial code (with some bugs) for dashboard charts etc

--- a/src/components/atoms/Drawer/Drawer.scss
+++ b/src/components/atoms/Drawer/Drawer.scss
@@ -117,4 +117,11 @@
       height: calc(100% - 57px);
     }
   }
+  
+  &--scrollable {
+    #{$base}__body {
+      height: calc(100% - 57px);
+      overflow-y: auto;
+    }
+  }
 }
