--- a/src/styles/Themes.scss
+++ b/src/styles/Themes.scss
@@ -30,6 +30,7 @@ $themeLightClass: ".theme--light";
   --color-warning: #{$colorWarning};
   --color-information: #{$colorInformation};
   --color-success: #{$colorSuccess};
+  --color-neutral: #EEF2F6;
   --shade100: #{$shade100};
   --shade80: #{$shade80};
   --shade70: #{$shade70};
@@ -75,6 +76,7 @@ $themeLightClass: ".theme--light";
   --color-warning: #{$colorWarningDark};
   --color-information: #{$colorInformationDark};
   --color-success: #{$colorSuccessDark};
+  --color-neutral: #3e434a;
   --shade100: #{$shade0};
   --shade80: #{$shade5};
   --shade70: #{$shade10};
