Prediction page selection bug fixed + loading added

--- a/src/components/atoms/Card/Card.scss
+++ b/src/components/atoms/Card/Card.scss
@@ -31,17 +31,7 @@
   }
 
   &__loader {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: $containerBorderRadius;
-    background-color: rgba(var(--shade70), 0.3);
-    backdrop-filter: blur(4px);
+    @extend %loaderBackgroundFill;
 
     p {
       color: var(--color-text);
