--- a/src/styles/Placeholders.scss
+++ b/src/styles/Placeholders.scss
@@ -96,3 +96,17 @@
   margin-left: $unit * 0.125;
   line-height: 0;
 }
+
+%loaderBackgroundFill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: $containerBorderRadius;
+  background-color: rgba(var(--shade70), 0.3);
+  backdrop-filter: blur(4px);
+}
