--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -42,12 +42,12 @@ $colorSecondary: #f3c243;
 $colorSecondaryDark: #d3ac48;
 
 $colorError: #e95555;
-$colorWarning: #ffbc57;
+$colorWarning: #eba338;
 $colorInformation: #518ac0;
 $colorSuccess: #338f48;
 
 $colorErrorDark: #f86262;
-$colorWarningDark: #ff9d5b;
+$colorWarningDark: #ed9155;
 $colorInformationDark: #34b6ff;
 $colorSuccessDark: #23b944;
 
