--- a/src/components/atoms/Drawer/Drawer.scss
+++ b/src/components/atoms/Drawer/Drawer.scss
@@ -1,6 +1,8 @@
 
 .drawer {
   $base: &;
+  $headerHeight: $unit * 3.5;
+
   inset: 0;
   display: none;
 
@@ -30,7 +32,7 @@
       gap: $unit * 0.5;
       align-items: center;
       padding: $unit * 0.5 $unit $unit * 0.5 $unit * 0.5;
-      min-height: $unit * 3;
+      height: $headerHeight;
       
       #{$base}__closeIcon {
         cursor: pointer;
@@ -65,6 +67,10 @@
     }
 
     #{$base}__body {
+      height: #{calc(100% - #{$headerHeight})};
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
       padding: $unit;
     }
   }
@@ -109,19 +115,6 @@
 
     #{$base}__card {
       animation: slideOutToRight $exitTime $exitFunction forwards;
-    }
-  }
-
-  &--fullHeight {
-    #{$base}__body {
-      height: calc(100% - 57px);
-    }
-  }
-  
-  &--scrollable {
-    #{$base}__body {
-      height: calc(100% - 57px);
-      overflow-y: auto;
     }
   }
 }
